Closes #141. Layout issues on iPad fixed.

--- a/source/css/monax.scss
+++ b/source/css/monax.scss
@@ -181,6 +181,7 @@ code {
     position: relative;
     bottom: 1px;
     white-space: pre-wrap;
+    word-break: break-word;
     // wrap on mobiles
     // @include responsive(breakpoint) { white-space: pre-wrap; }
 }
@@ -359,7 +360,7 @@ nav.navbar {
         // Animate height on mobile
         @include responsive (breakpoint) {
             max-height: 60px;
-            overflow: hidden;
+            // overflow: hidden;
             @include transition(max-height 1s);
             @include transition-timing-function(easeInCubic);
             @include flexbox;
@@ -395,7 +396,7 @@ nav.navbar {
             @include responsive(breakpoint) {
                 border-radius: 0;
                 padding: 12px 15px;
-                margin: 0;
+                margin: 4px 0 0 0;
             }
 
             &:hover {
